--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "explorer.fileNesting.enabled": false,
-    "editor.fontFamily": "'iA Writer Mono S', Menlo, Monaco, 'Courier New', monospace"
+    "editor.fontFamily": "iA Writer Mono S, Menlo, Monaco, 'Courier New', monospace"
 }
