--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "explorer.fileNesting.enabled": false,
-    "editor.fontFamily": "fira code, monospace"
+    "editor.fontFamily": "iA Writer Mono S, monospace"
 }
