changed workspace font

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "explorer.fileNesting.enabled": false,
-    "editor.fontFamily": "iA Writer Mono S, monospace"
+    "editor.fontFamily": " JetBrains Mono,Fira Code, iA Writer Mono S, monospace"
 }
