--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "explorer.fileNesting.enabled": false,
-    "editor.fontFamily": " JetBrains Mono,Fira Code, iA Writer Mono S, monospace"
+    "editor.fontFamily": "Fira Code,  JetBrains Mono, iA Writer Mono S, monospace",
+    "editor.fontLigatures": true
 }
